# Competitor-Intelligence-System

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
analysis/: comparator.py
api/: __init__.py  main.py  pipeline.py  schemas.py
competitor_discovery/: __init__.py  discovery.py
crawler/: __init__.py  crawler.py
database/: models.py  session.py
embedding/: embedder.py
extraction/: business_extractor.py
frontend/: app.py
processing/: dom_analyzer.py  text_processor.py
reporting/: report_generator.py
utils/: config.py  helpers.py  llm_wrapper.py  logger.py
vision/: visual_analyzer.py
